# malum_naghi

./: README.md  ds_config.json  finetune.py  format.py  pyproject.toml  template_load.py  train.sh
benchmark/: __main__.py  memory.py
benchmark/data/: __init__.py  data.py  models.py  randn.py
cut_cross_entropy/: __init__.py  cce.py  cce_backward.py  cce_lse_forward.py  constants.py  doc.py  indexed_dot.py  linear_cross_entropy.py  tl_autotune.py  tl_utils.py  torch_compile.py  utils.py
cut_cross_entropy/transformers/: __init__.py  gemma2.py  llama.py  mistral.py  patch.py  phi3.py  qwen2.py  utils.py
legacy/: baobabu_val.json  finetune.py  format.py  infer.py  parquet2json.py
legacy/data/: CoTangent_ja.json  malum-230.json
legacy/formatted_data/: minnade.json  null_instruct.json
scripts/: train.sh
tests/: test_cce_indexed_dot.py  test_cce_loss_backward.py  test_cce_loss_forward.py  test_cce_lse.py
training/: train.py  zero3.json
