[project]
name = "cut-cross-entropy"
dynamic = ["version"]
readme = "README.md"
description = "Code for cut cross entropy, a memory efficient implementation of linear-cross-entropy loss."
requires-python = ">= 3.10"

dependencies = [
    "torch>=2.4",
    'triton>=3.0.0 ; platform_system != "Darwin"',
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-sugar",
]
transformers = [
    "transformers>=4.44.2",
]

all = [
    "cut-cross-entropy[transformers]",
    'deepspeed>=0.15.1 ; platform_system != "Darwin"',
    "accelerate>=0.34.2",
    "datasets>=3.1.0",
    "huggingface_hub>=0.26.2",
    "pandas",
    "fire",
    "tqdm",
]

dev = [
    "cut-cross-entropy[all,test]",
    "build",
    "twine",
    "pre-commit",
    "pytest-xdist",
]


[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cut_cross_entropy*"]

[tool.setuptools.dynamic]
version = {attr = "cut_cross_entropy.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose -rsxX -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
lint.select = ["F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["cut_cross_entropy"]
